Added simple Security support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.jpa.generate-ddl=true
 #spring.jpa.show-sql= true
+
+#crsf
+spring.mustache.expose-request-attributes=true
