--- a/pom.xml
+++ b/pom.xml
@@ -31,10 +31,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
-<!--            <scope>runtime</scope>-->
             <optional>true</optional>
         </dependency>
 
+        <!-- Database Support -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -45,11 +45,12 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!--        Security-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
+            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+
     </dependencies>
 
     <build>
