--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,6 @@ spring.jpa.generate-ddl=true
 #spring.jpa.show-sql= true
 
 #crsf
-spring.mustache.expose-request-attributes=true
+spring.freemarker.expose-request-attributes=true
+
+spring.freemarker.suffix=.ftl
