--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.generate-ddl=true
 spring.freemarker.expose-request-attributes=true
 
 spring.freemarker.suffix=.ftl
+
+upload.path=/b:/dir1/dir2/sweater
